@startuml

package parser {
    !include parser-rtl.puml
    !include parser-system.puml
    !include parser-mc.puml

    class ParserError {
        --data members--
        -m_startPosition : PositionError
        -m_endPosition : std::optional<PositionError>
        -m_errorMessage : std::string
        -m_type : Type
        --constructors--
        +ParserError(const PositionError& startPosition, const std::string_view errorMessage, Type type)
        +ParserError(const std::string_view errorMessage, const std::size_t line, const std::size_t charPositionInLine, Type type)
        +ParserError(const PositionError& startPosition, const PositionError& endPosition, const std::string_view errorMessage, Type type)
        +ParserError(spot::one_parse_error&& spotParserError)
        --member functions--
        +startLocation() : PositionError
        +endLocation() : std::optional<PositionError>
        +type() : Type
        +errorMessage() : std::string_view
    }

    class PositionError {
        --data members--
        -m_charPositionInLine : std::size_t
        -m_line : std::size_t
        --constructors--
        +PositionError(const std::size_t m_line, const std::size_t m_charPositionInLine)
        +PositionError(const spot::position& position)
        +PositionError()
        --function members--
        +charPositionInLine() : std::size_t
        +line() : std::size_t
    }


    enum ParserError::Type {
        lexical
        syntax
        unknown
    }

    class ErrorListener {
        --data members--
        -m_errors : std::vector<ParserError>
        --member functions--
        +hasErrors() : bool
        +errors() : std::vector<ParserError>
        +syntaxError(antlr4::Recognizer* recognizer, antlr4::Token* offendingSymbol, size_t line, size_t charPositionInLine, const std::string& msg, std::exception_ptr e) : void
        -addError(ParserError&& error) : void
    }

    class antlr4::BaseErrorListener {}

    ParserError *--> "1..2" PositionError
    ParserError +-- ParserError::Type
    PolyhedralSystemParsingResult --> "0..*" ParserError
    RtlfParsingResult --> "0..*" ParserError
    ErrorListener --> "0..*" ParserError
    ErrorListener --> antlr4::BaseErrorListener
}
@enduml